feat: added city analitycs logic to geo stat
